# SherrByte-twt

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  SETUP_GUIDE.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: ci.yml  enrich.yml  ingest.yml  seed.yml
app/: __init__.py  config.py  main.py
app/api/v1/: __init__.py  articles.py  auth.py  deps.py  health.py
app/api/v1/endpoints/: __init__.py  feed.py  interactions.py  onboarding.py
app/core/: cache.py  errors.py  logging.py  security.py  text.py
app/db/: __init__.py  session.py
app/models/: __init__.py  ai.py  article.py  interactions.py  source.py  user.py
app/repos/: __init__.py  ai_repo.py  article_repo.py  user_repo.py
app/schemas/: article.py  auth.py  event_buffer.py  events.py  feed.py
app/services/: affinity.py  ai_service.py  auth_service.py  embedding.py  event_buffer.py  ingestion_service.py  llm_router.py  mmr.py  profile_vectors.py  prompts.py  rss_fetcher.py  scorer.py
app/workers/: enrich_ai.py  ingest_rss.py  recompute_affinity.py  seed_sources.py  seed_taxonomy.py  sources_seed.py  taxonomy_seed.py
migrations/: env.py
migrations/versions/: 0001_users_sessions.py  0002_sources_articles.py  0003_ai_tables.py
phase-e-only/.github/workflows/: als-train.yml  event-drain.yml  recompute-affinity.yml
phase-e-only/app/api/v1/endpoints/: feed.py
phase-e-only/app/models/: interactions.py
phase-e-only/app/schemas/: events.py  feed.py
phase-e-only/app/services/: affinity.py  mmr.py  profile_vectors.py  scorer.py
phase-e-only/app/workers/: als_train.py  event_drain.py
phase-e-only/migrations/versions/: 0005_phase_e_interactions.py
phase-e-only/tests/phase_e/: test_phase_e.py
scripts/: dev.sh
sherrbyte-frontend/: README.md  firebase.json  index.html  manifest.json  sw.js
sherrbyte-frontend/css/: app.css
sherrbyte-frontend/js/: api.js  app.js  events.js  feed.js
tests/: test_ai.py  test_health.py  test_security.py  test_text.py
